@@ -9675,6 +9675,13 @@ boost/libs/wave/test/testwave/testfiles/006_029.hpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/006_030.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/006_030.hpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/006_031.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_032.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_033.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_034.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_035.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_036.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_037.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/006_038.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_001.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_002.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/999_003.cpp svneol=native#text/plain
